--- a/yuntasproducciones-17-06/yuntasproducciones/css/letreros-neon-led-anuncios-cuadros-decoracion-luces.css
+++ b/yuntasproducciones-17-06/yuntasproducciones/css/letreros-neon-led-anuncios-cuadros-decoracion-luces.css
@@ -1,9 +1,13 @@
+/* Ajustes optimizados de los estilos proporcionados */
+
 .section_01 .container_subtitles img {
     height: 45%;
 }
+
 .section_02 .container_subtitles img {
     height: 90%;
 }
+
 .section_04 .container_subtitles img {
     height: 95%;
 }
@@ -11,11 +15,13 @@
 .context-text {
     width: 37%;
     height: 70%;
-    translate: 10% -50%;
-}       
+    transform: translate(10%, -50%);
+}
+
 .section_03 .context-text p {
     font-size: 2.2rem;
-}        
+}
+
 .section_03 .context-text span {
     font-size: 2.5em;
     min-width: 20%;
@@ -39,7 +45,7 @@
 .sec_col {
     width: 375px;
     gap: 5.8rem 0;
-    padding-top: .8rem;
+    padding-top: 0.8rem;
 }
 
 .content_info p {
@@ -61,16 +67,15 @@ h1 {
     font-family: Arial;
     text-align: right;
     color: #fefaf5;
-    z-index: 1;   
+    z-index: 1;
     transition: text-shadow 0.5s ease;
 }
 
 @media (max-width: 1350px) {
     .section_03 .context-text p {
         font-size: 2rem;
-        padding-right: 0;
     }
-    
+
     .tranding-slide-img img {
         width: 100%;
         height: auto;
@@ -80,30 +85,35 @@ h1 {
 @media (max-width: 1075px) {
     .section_02 .content_info {
         font-size: 1.2rem;
-    }           
+    }
+
     .sec_col {
         width: 100%;
-        padding: 0;
         transform: translate(7%, -5%);
-    }            
+    }
+
     .line {
         width: 35px;
-    }           
+    }
+
     .sec_col p {
         font-size: 1.37em;
-    }            
+    }
+
     .section_03 .context-text p {
         font-size: 1.5rem;
-        padding-right: 0;
-    }            
+    }
+
     .section_03 .context-text span {
         margin-top: -5px;
-    }            
+    }
+
     .section_01 .paragraph {
         font-size: 1.5rem;
-        translate: -10% -10%;
+        transform: translate(-10%, -10%);
         top: 30%;
-    }            
+    }
+
     .tranding-slide-img img {
         width: 100%;
         height: auto;
@@ -113,16 +123,20 @@ h1 {
 @media (max-width: 765px) {
     .sec_col {
         justify-content: space-between;
-    }            
+    }
+
     .sec_col p {
         font-size: 1.3em;
-    }            
+    }
+
     .first_col {
         display: none;
-    }            
+    }
+
     .line {
         height: 100%;
-    }            
+    }
+
     .tranding-slide-img img {
         width: 100%;
         height: auto;
@@ -133,39 +147,46 @@ h1 {
     .sec_col p {
         font-size: 1.2rem;
         transform: translate(0%, 40%);
-    }            
+    }
+
     .sec_col {
         justify-content: center;
-        top: auto;
         font-size: 1.1rem;
         gap: 10%;
-    }            
+    }
+
     .context-text {
         width: 45% !important;
-    }            
+    }
+
     .section_01 .paragraph {
         width: 45%;
         font-size: 15px;
         transform: translate(0%, -15%);
-    }            
+    }
+
     .section_03 .context-text p {
         font-size: 12px;
-    }            
+    }
+
     .section_03 .context-text span {
         font-size: 2rem;
         margin-top: 0;
-    }            
+    }
+
     .line {
         width: 24px;
         position: relative;
         top: 0;
-    }            
+    }
+
     h1 {
         font-size: 40px;
         top: 50px !important;
         width: 51% !important;
         left: 10px !important;
-    }            
+    }
+
     .tranding-slide-img img {
         width: 100%;
         height: auto;
@@ -175,7 +196,7 @@ h1 {
 @media (max-width: 405px) {
     .section_03 .context-text {
         gap: 1rem 0;
-        translate: 5% -55%;
+        transform: translate(5%, -55%);
     }
 }
 
@@ -183,7 +204,7 @@ h1 {
     .section_01 .paragraph {
         font-size: 1rem;
     }
-    
+
     .tranding-slide-img img {
         width: 100%;
         height: auto;
@@ -191,7 +212,7 @@ h1 {
 }
 
 .section_04 {
-    background-color: #FEFAF5;
+    background-color: #fefaf5; 
 }
 
 .slider--inner img {
