--- a/yuntasproducciones-17-06/yuntasproducciones/css/letreros-neon-led-anuncios-cuadros-decoracion-luces.css
+++ b/yuntasproducciones-17-06/yuntasproducciones/css/letreros-neon-led-anuncios-cuadros-decoracion-luces.css
@@ -7,7 +7,6 @@
 .section_04 .container_subtitles img {
     height: 95%;
 }
-
 .context-text {
     width: 37%;
     height: 70%;
@@ -21,37 +20,30 @@
     min-width: 20%;
     margin-top: -10px;
 }
-
 .first_col {
     width: 35px;
     height: 125%;
 }
-
 .line {
     background-position: 65% 60%;
     width: 100%;
 }
-
 .section_02 .content_info {
     height: 70%;
 }
-
 .sec_col {
     width: 375px;
     gap: 5.8rem 0;
     padding-top: .8rem;
 }
-
 .content_info p {
     font-size: 17px;
     margin-bottom: -25px;
 }
-
 .section_01 .paragraph {
     top: 50%;
     font-size: 20px;
 }
-
 h1 {
     width: 414px;
     font-size: 80px;
@@ -64,19 +56,16 @@ h1 {
     z-index: 1;   
     transition: text-shadow 0.5s ease;
 }
-
 @media (max-width: 1350px) {
     .section_03 .context-text p {
         font-size: 2rem;
         padding-right: 0;
     }
-
     .tranding-slide-img img {
         width: 100%;
         height: auto;
     }
 }
-
 @media (max-width: 1075px) {
     .section_02 .content_info {
         font-size: 1.2rem;
@@ -109,7 +98,6 @@ h1 {
         height: auto;
     }
 }
-
 @media (max-width: 765px) {
     .sec_col {
         justify-content: space-between;
@@ -128,7 +116,6 @@ h1 {
         height: auto;
     }
 }
-
 @media (max-width: 575px) {
     .sec_col p {
         font-size: 1.2rem;
@@ -163,43 +150,37 @@ h1 {
     h1 {
         font-size: 40px;
         top: 50px !important;
-        width: 51% !important;
+        width: 5% !important;
         left: 10px !important;
     }            
     .tranding-slide-img img {
         width: 100%;
         height: auto;
     }
+    
 }
-
 @media (max-width: 405px) {
     .section_03 .context-text {
         gap: 1rem 0;
         translate: 5% -55%;
     }
 }
-
 @media (max-width: 320px) {
     .section_01 .paragraph {
         font-size: 1rem;
     }
-
     .tranding-slide-img img {
         width: 100%;
         height: auto;
     }
 }
-
 .section_04 {
     background-color: #FEFAF5;
 }
-
 .slider--inner img {
     bottom: 100px;
 }
-
 #texto-debajo-h1 {
-    width: 450px;
     left: 20%;
 }
 
@@ -208,7 +189,6 @@ h1 {
     width: 20%;
     height: 40%;
 }
-
 .asesoria-gratis {
     top: 80%;
     width: 200px;
@@ -216,3 +196,16 @@ h1 {
     font-size: 40px;
 }
 
+/* Estilos para el slider */
+.tranding-slide-img {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+
+.tranding-slide-img img {
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: cover;
+}
