--- a/yuntasproducciones-17-06/yuntasproducciones/css/letreros-neon-led-anuncios-cuadros-decoracion-luces.css
+++ b/yuntasproducciones-17-06/yuntasproducciones/css/letreros-neon-led-anuncios-cuadros-decoracion-luces.css
@@ -11,10 +11,10 @@
     width: 37%;
     height: 70%;
     translate: 10% -50%;
-}       
+}
 .section_03 .context-text p {
     font-size: 2.2rem;
-}        
+}
 .section_03 .context-text span {
     font-size: 2.5em;
     min-width: 20%;
@@ -42,9 +42,9 @@
 }
 .section_01 .paragraph {
     top: 50%;
-    font-size: 20px;
+    font-size: 20px
 }
-h1 {
+h1{
     width: 414px;
     font-size: 80px;
     position: absolute;
@@ -61,103 +61,110 @@ h1 {
         font-size: 2rem;
         padding-right: 0;
     }
-    .tranding-slide-img img {
-        width: 100%;
-        height: auto;
-    }
 }
 @media (max-width: 1075px) {
     .section_02 .content_info {
         font-size: 1.2rem;
-    }           
+    } 
     .sec_col {
         width: 100%;
         padding: 0;
         transform: translate(7%, -5%);
-    }            
+    }
     .line {
         width: 35px;
-    }           
+    }
     .sec_col p {
         font-size: 1.37em;
-    }            
+    }
     .section_03 .context-text p {
         font-size: 1.5rem;
         padding-right: 0;
-    }            
+    }
     .section_03 .context-text span {
         margin-top: -5px;
-    }            
+    }
     .section_01 .paragraph {
         font-size: 1.5rem;
         translate: -10% -10%;
         top: 30%;
-    }            
-    .tranding-slide-img img {
-        width: 100%;
-        height: auto;
     }
 }
 @media (max-width: 765px) {
+    
     .sec_col {
         justify-content: space-between;
-    }            
+    }
     .sec_col p {
         font-size: 1.3em;
-    }            
+    }
     .first_col {
         display: none;
-    }            
+    }
     .line {
         height: 100%;
-    }            
-    .tranding-slide-img img {
-        width: 100%;
-        height: auto;
     }
+}
+@media (max-width: 500px) {
+    #texto-debajo-h1 {
+        width: 250px!important;
+        left: 15px !important;
+        top: 67% !important;
+    }
+    .container-carrusel {
+        display: flex;
+        height: 450px;
+    }
+    .section_02 .sec_col p {
+        margin: 0;
+        font-size: 12px;
+    }
+    .line {
+        height: 105%;
+    }
+
+    #main-portada {
+        height: 275px;
+    }
+    
 }
 @media (max-width: 575px) {
     .sec_col p {
         font-size: 1.2rem;
         transform: translate(0%, 40%);
-    }            
+    }
     .sec_col {
         justify-content: center;
         top: auto;
         font-size: 1.1rem;
         gap: 10%;
-    }            
+    }
     .context-text {
         width: 45% !important;
-    }            
+    }
     .section_01 .paragraph {
         width: 45%;
         font-size: 15px;
         transform: translate(0%, -15%);
-    }            
+    }
     .section_03 .context-text p {
         font-size: 12px;
-    }            
+    }
     .section_03 .context-text span {
         font-size: 2rem;
         margin-top: 0;
-    }            
+    }
     .line {
         width: 24px;
         position: relative;
         top: 0;
-    }            
+    }
     h1 {
         font-size: 40px;
-        top: 50px !important;
-        width: 5% !important;
+        width: 1% !important;
         left: 10px !important;
-    }            
-    .tranding-slide-img img {
-        width: 100%;
-        height: auto;
+        top: 30px !important;
     }
-    
 }
 @media (max-width: 405px) {
     .section_03 .context-text {
@@ -169,43 +176,26 @@ h1 {
     .section_01 .paragraph {
         font-size: 1rem;
     }
-    .tranding-slide-img img {
-        width: 100%;
-        height: auto;
-    }
 }
 .section_04 {
-    background-color: #FEFAF5;
+    background-color: #FEFAF5
 }
 .slider--inner img {
     bottom: 100px;
 }
 #texto-debajo-h1 {
+    width: 450px;
     left: 20%;
 }
-
 #semiazul {
     top: 60%;
     width: 20%;
     height: 40%;
 }
-.asesoria-gratis {
+.asesoria-gratis{
     top: 80%;
     width: 200px;
     transform: translate(10%, -30%);
     font-size: 40px;
 }
 
-/* Estilos para el slider */
-.tranding-slide-img {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-}
-
-.tranding-slide-img img {
-    width: 100%;
-    height: auto;
-    display: block;
-    object-fit: cover;
-}
