--- a/yuntasproducciones-17-06/yuntasproducciones/css/letreros-neon-led-anuncios-cuadros-decoracion-luces.css
+++ b/yuntasproducciones-17-06/yuntasproducciones/css/letreros-neon-led-anuncios-cuadros-decoracion-luces.css
@@ -1,211 +1,1 @@
-.section_01 .container_subtitles img {
-    height: 45%;
-}
-.section_02 .container_subtitles img {
-    height: 90%;
-}
-.section_04 .container_subtitles img {
-    height: 95%;
-}
-.context-text {
-    width: 37%;
-    height: 70%;
-    translate: 10% -50%;
-}
-.section_03 .context-text p {
-    font-size: 2.2rem;
-}
-.section_03 .context-text span {
-    font-size: 2.5em;
-    min-width: 20%;
-    margin-top: -10px;
-}
-.first_col {
-    width: 35px;
-    height: 125%;
-}
-.line {
-    background-position: 65% 60%;
-    width: 100%;
-}
-.section_02 .content_info {
-    height: 70%;
-}
-.sec_col {
-    width: 375px;
-    gap: 5.8rem 0;
-    padding-top: .8rem;
-}
-.content_info p {
-    font-size: 17px;
-    margin-bottom: -25px;
-}
-.section_01 .paragraph {
-    top: 50%;
-    font-size: 20px
-}
-h1{
-    width: 414px;
-    font-size: 80px;
-    position: absolute;
-    top: 15%;
-    left: 20%;
-    font-family: Arial;
-    text-align: right;
-    color: #fefaf5;
-    z-index: 1;   
-    transition: text-shadow 0.5s ease;
-}
-@media (max-width: 1350px) {
-    .section_03 .context-text p {
-        font-size: 2rem;
-        padding-right: 0;
-    }
-}
-@media (max-width: 1075px) {
-    .section_02 .content_info {
-        font-size: 1.2rem;
-    } 
-    .sec_col {
-        width: 100%;
-        padding: 0;
-        transform: translate(7%, -5%);
-    }
-    .line {
-        width: 35px;
-    }
-    .sec_col p {
-        font-size: 1.37em;
-    }
-    .section_03 .context-text p {
-        font-size: 1.5rem;
-        padding-right: 0;
-    }
-    .section_03 .context-text span {
-        margin-top: -5px;
-    }
-    .section_01 .paragraph {
-        font-size: 1.5rem;
-        translate: -10% -10%;
-        top: 30%;
-    }
-}
-@media (max-width: 765px) {
-    
-    .sec_col {
-        justify-content: space-between;
-    }
-    .sec_col p {
-        font-size: 1.3em;
-    }
-    .first_col {
-        display: none;
-    }
-    .line {
-        height: 100%;
-    }
-}
-@media (max-width: 500px) {
-    #texto-debajo-h1 {
-        left: 15px !important;
-        top: 67% !important;
-    }
-    .container-carrusel {
-        display: flex;
-        height: 450px;
-    }
-    .section_02 .sec_col p {
-        margin: 0;
-        font-size: 12px;
-    }
-    .line {
-        height: 105%;
-    }
-
-    #main-portada {
-        height: 275px;
-    }
-    
-}
-@media (max-width: 575px) {
-    .sec_col p {
-        font-size: 1.2rem;
-        transform: translate(0%, 40%);
-    }
-    .sec_col {
-        justify-content: center;
-        top: auto;
-        font-size: 1.1rem;
-        gap: 10%;
-    }
-    .context-text {
-        width: 45% !important;
-    }
-    .section_01 .paragraph {
-        width: 45%;
-        font-size: 15px;
-        transform: translate(0%, -15%);
-    }
-    .section_03 .context-text p {
-        font-size: 12px;
-    }
-    .section_03 .context-text span {
-        font-size: 2rem;
-        margin-top: 0;
-    }
-    .line {
-        width: 24px;
-        position: relative;
-        top: 0;
-    }
-    h1 {
-        font-size: 40px;
-        width: 50% !important;
-        left: 10px !important;
-        top: 70px !important;
-    }
-}
-@media (max-width: 405px) {
-    .section_03 .context-text {
-        gap: 1rem 0;
-        translate: 5% -55%;
-    }
-}
-@media (max-width: 320px) {
-    .section_01 .paragraph {
-        font-size: 1rem;
-    }
-}
-.section_04 {
-    background-color: #FEFAF5
-}
-.slider--inner img {
-    bottom: 60px;
-}
-#texto-debajo-h1 {
-    width: 450px;
-    left: 20%;
-}
-#semiazul {
-    top: 60%;
-    width: 20%;
-    height: 40%;
-}
-.asesoria-gratis{
-    top: 80%;
-    width: 200px;
-    transform: translate(10%, -30%);
-    font-size: 40px;
-}
-.slider {
-    overflow: hidden;
-}
-.slider--inner {
-    display: flex;
-}
-.slider--inner img {
-    width: 100%;
-    height: auto;
-    aspect-ratio: auto !important; /* Anula cualquier aspect-ratio */
-    position: static !important;   /* Anula cualquier posición relativa */
-}
+.section_01 .container_subtitles img{height:45%;}.section_02 .container_subtitles img{height:90%;}.section_04 .container_subtitles img{height:95%;}.context-text{width:37%;height:70%;translate:10% -50%;}.section_03 .context-text p{font-size:2.2rem;}.section_03 .context-text span{font-size:2.5em;min-width:20%;margin-top:-10px;}.first_col{width:35px;height:125%;}.line{background-position:65% 60%;width:100%;}.section_02 .content_info{height:70%;}.sec_col{width:375px;gap:5.8rem 0;padding-top:.8rem;}.content_info p{font-size:17px;margin-bottom:-25px;}.section_01 .paragraph{top:50%;font-size:20px}h1{width:414px;font-size:80px;position:absolute;top:15%;left:20%;font-family:Arial;text-align:right;color:#fefaf5;z-index:1;transition:text-shadow 0.5s ease;}@media (max-width:1350px){.section_03 .context-text p{font-size:2rem;padding-right:0;}}@media (max-width:1075px){.section_02 .content_info{font-size:1.2rem;}.sec_col{width:100%;padding:0;transform:translate(7%,-5%);}.line{width:35px;}.sec_col p{font-size:1.37em;}.section_03 .context-text p{font-size:1.5rem;padding-right:0;}.section_03 .context-text span{margin-top:-5px;}.section_01 .paragraph{font-size:1.5rem;translate:-10% -10%;top:30%;}}@media (max-width:765px){.sec_col{justify-content:space-between;}.sec_col p{font-size:1.3em;}.first_col{display:none;}.line{height:100%;}}@media (max-width:500px){#texto-debajo-h1{left:15px !important;top:67% !important;}.container-carrusel{display:flex;height:450px;}.section_02 .sec_col p{margin:0;font-size:12px;}.line{height:105%;}#main-portada{height:275px;}}@media (max-width:575px){.sec_col p{font-size:1.2rem;transform:translate(0%,40%);}.sec_col{justify-content:center;top:auto;font-size:1.1rem;gap:10%;}.context-text{width:45% !important;}.section_01 .paragraph{width:45%;font-size:15px;transform:translate(0%,-15%);}.section_03 .context-text p{font-size:12px;}.section_03 .context-text span{font-size:2rem;margin-top:0;}.line{width:24px;position:relative;top:0;}h1{font-size:40px;width:50% !important;left:10px !important;top:70px !important;}}@media (max-width:405px){.section_03 .context-text{gap:1rem 0;translate:5% -55%;}}@media (max-width:320px){.section_01 .paragraph{font-size:1rem;}}.section_04{background-color:#FEFAF5;}.slider--inner img{bottom:60px;}#texto-debajo-h1{width:450px;left:20%;}#semiazul{top:60%;width:20%;height:40%;}.asesoria-gratis{top:80%;width:200px;transform:translate(10%,-30%);font-size:40px;}.slider{overflow:hidden;}.slider--inner{display:flex;}.slider--inner img{width:100%;height:auto;aspect-ratio:auto !important;position:static !important;}
